--- a/source/config.toml
+++ b/source/config.toml
@@ -4,9 +4,9 @@ baseURL = "https://atrahhdis.github.io"
 theme = 'hugo-bearblog'
 
 # Basic metadata configuration for your blog.
-title = "Яeversed Ƨiddharta"
-author = "atrahhdis"
-copyright = "Copyleft 2020, Atrahhdis."
+title = "Яeversed Ƨiddhartha"
+author = "ahtrahddis"
+copyright = "Copyleft 2020, ahtrahddis."
 languageCode = "en-US"
 
 # Generate a nice robots.txt for SEO
@@ -36,7 +36,7 @@ ignoreErrors = ["error-disable-taxonomy"]
   # Another "title" :-). This one is used as the site_name on the Hugo's internal
   # opengraph structured data template.
   # See https://ogp.me/ and https://gohugo.io/templates/internal#open-graph.
-  title = "Reversed Siddharta"
+  title = "Reversed Siddhartha"
 
   # This theme will, by default, inject a made-with-line at the bottom of the page.
   # You can turn it off, but we would really appreciate if you don’t :-).
