renamed About page to Info

--- a/source/config.toml
+++ b/source/config.toml
@@ -62,8 +62,8 @@ ignoreErrors = ["error-disable-taxonomy"]
 
 [[menu.main]]
   identifier = "about"
-  name = "About"
-  url = "/about/"
+  name = "Info"
+  url = "/info/"
   weight = 4
 
 [markup.goldmark.renderer]
