--- a/source/config.toml
+++ b/source/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://ahtrahddis.github.io"
+baseURL = "https://ahtrahddis.eu"
 
 # The name of this wonderful theme ;-).
 theme = 'hugo-bearblog'
